[gd_scene load_steps=4 format=3 uid="uid://033unb7334ag"]

[ext_resource type="PackedScene" uid="uid://btt0o1npqr8pe" path="res://scenes/game_binary_puzzle/binary_puzzle.tscn" id="1_05ubj"]
[ext_resource type="Script" path="res://scenes/game_binary_puzzle/ftg_binary_puzzle.gd" id="2_q4kdo"]
[ext_resource type="PackedScene" uid="uid://32twi0juyy6u" path="res://scenes/game_utils/game_utils_game_timer/game_utils_game_timer.tscn" id="3_8scs2"]

[node name="FtgBinaryPuzzle" instance=ExtResource("1_05ubj")]
script = ExtResource("2_q4kdo")

[node name="GameUtilsGameTimer" parent="." index="1" instance=ExtResource("3_8scs2")]

[connection signal="num_changed" from="." to="." method="check_game_cleared"]
[connection signal="pause_timer" from="." to="GameUtilsGameTimer" method="pause_timer"]
[connection signal="start_timer" from="." to="GameUtilsGameTimer" method="start_timer"]
[connection signal="timeout" from="GameUtilsGameTimer" to="." method="_on_game_utils_game_timer_timeout"]
